// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterIcon: Component should render correctly 1`] = `
<filter.svg
  style={
    Object {
      "height": "60px",
      "stroke": "#FFF",
      "width": "60px",
    }
  }
/>
`;

exports[`FilterIcon: Component should render with custom styles 1`] = `
<filter.svg
  style={
    Object {
      "fill": "blue",
      "height": "60px",
      "stroke": "#FFF",
      "width": "60px",
    }
  }
/>
`;
